run the given script locally and get some results

--- a/Codes/mimic3_mvcv/10_get_17-features-processed(fromdb).ipynb
+++ b/Codes/mimic3_mvcv/10_get_17-features-processed(fromdb).ipynb
@@ -18,10 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 17 features: features used in calculating SAPS II score\n",
@@ -127,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +149,7 @@
        "             ('admission_type', 17)])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,8 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -190,9 +188,7 @@
     {
      "data": {
       "text/plain": [
-       "{'adm_features': (32254.521020000004, 0, 0, 0, 0),\n",
-       " 'adm_labels': (0, 0, 0, 0, 0, 0),\n",
-       " 'serial_features': {'codes': [(3, 0, 15.0),\n",
+       "{'serial_features': {'codes': [(3, 0, 15.0),\n",
        "   (7, 0, 15.0),\n",
        "   (11, 0, 15.0),\n",
        "   (18, 0, 15.0),\n",
@@ -710,12 +706,14 @@
        "   (117, 14, 199999),\n",
        "   (118, 14, 199999),\n",
        "   (119, 14, 199999)],\n",
+       "  'timestep': 120,\n",
        "  'features': 15,\n",
-       "  'timelength': 333060.0,\n",
-       "  'timestep': 120}}"
+       "  'timelength': 333060.0},\n",
+       " 'adm_features': (32254.521020000004, 0, 0, 0, 0),\n",
+       " 'adm_labels': (0, 0, 0, 0, 0, 0)}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +823,7 @@
     "#     general = admres['general']\n",
     "#     mortal, die24, die24_48, die48_72, die30days, die1year = general[4], general[6], general[7], general[8], general[9], general[10]\n",
     "#     adm_labels = (mortal, die24, die24_48, die48_72, die30days, die1year)\n",
-    "    admlabel = np.load(os.path.join(LABELDIR, 'adm-%.6d.npy' % aid)).tolist()\n",
+    "    admlabel = np.load(os.path.join(LABELDIR, 'adm-%.6d.npy' % aid), allow_pickle=True).tolist()\n",
     "    adm_labels = (\n",
     "        admlabel['mor'],\n",
     "        admlabel['mor24'],\n",
@@ -858,9 +856,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -887,11 +884,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/z003xbnv/miniconda2/envs/bk/lib/python3.6/site-packages/numpy/core/_asarray.py:136: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  return array(a, dtype, copy=False, order=order, subok=True)\n"
+     ]
+    }
+   ],
    "source": [
     "RAWDIR = os.path.join(TARGETDIR, 'processed_db')\n",
     "def extract_time_series(aidres):\n",
@@ -911,10 +915,10 @@
     "    return admres['serial_features']['timelength'] > hrs * 3600.0\n",
     "    \n",
     "def extract_data(aid, hrs):\n",
-    "    admres = np.load(os.path.join(RAWDIR, 'adm-%.6d.npy' % aid)).tolist()\n",
+    "    admres = np.load(os.path.join(RAWDIR, 'adm-%.6d.npy' % aid), allow_pickle=True).tolist()\n",
     "    if check_adm_hrs_pass(admres, hrs):\n",
-    "        ori_admres = np.load(os.path.join(SOURCEDIR, 'adm-%.6d.npy' % aid)).tolist()\n",
-    "        admlabel = np.load(os.path.join(LABELDIR, 'adm-%.6d.npy' % aid)).tolist()\n",
+    "        ori_admres = np.load(os.path.join(SOURCEDIR, 'adm-%.6d.npy' % aid), allow_pickle=True).tolist()\n",
+    "        admlabel = np.load(os.path.join(LABELDIR, 'adm-%.6d.npy' % aid), allow_pickle=True).tolist()\n",
     "        adm_labels = (\n",
     "            admlabel['mor'],\n",
     "            admlabel['mor24'],\n",
@@ -966,15 +970,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# > 48hrs\n",
     "collect_admissions_with_more_than_hrs(48)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -993,7 +1002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
