--- a/Codes/mimic3_mvcv/12.0_get_severity_scores_first48hrs_17-features-processed.ipynb
+++ b/Codes/mimic3_mvcv/12.0_get_severity_scores_first48hrs_17-features-processed.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -70,32 +68,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "executing concepts_48/echo-data.sql...\n",
-      "finish executing concepts_48/echo-data.sql!\n",
-      "executing concepts_48/ventilation-durations.sql...\n",
-      "finish executing concepts_48/ventilation-durations.sql!\n",
-      "executing concepts_48/firstday/vitals-first-day.sql...\n",
-      "finish executing concepts_48/firstday/vitals-first-day.sql!\n",
-      "executing concepts_48/firstday/urine-output-first-day.sql...\n",
-      "finish executing concepts_48/firstday/urine-output-first-day.sql!\n",
-      "executing concepts_48/firstday/ventilation-first-day.sql...\n",
-      "finish executing concepts_48/firstday/ventilation-first-day.sql!\n",
-      "executing concepts_48/firstday/gcs-first-day.sql...\n",
-      "finish executing concepts_48/firstday/gcs-first-day.sql!\n",
-      "executing concepts_48/firstday/labs-first-day.sql...\n",
-      "finish executing concepts_48/firstday/labs-first-day.sql!\n",
-      "executing concepts_48/firstday/blood-gas-first-day.sql...\n",
-      "finish executing concepts_48/firstday/blood-gas-first-day.sql!\n",
-      "executing concepts_48/firstday/blood-gas-first-day-arterial.sql...\n",
-      "finish executing concepts_48/firstday/blood-gas-first-day-arterial.sql!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "conn = getConnection()\n",
     "cur = conn.cursor()\n",
@@ -144,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -161,7 +136,7 @@
     "HRDIR = os.path.join(TARGETDIR, '%dhrs' % HRS)\n",
     "RESDIR = os.path.join(HRDIR, 'non_series')\n",
     "\n",
-    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS)).tolist()\n",
+    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS), allow_pickle=True).tolist()\n",
     "valid_aids = [t[0][-1] for t in data_all]\n",
     "print(len(valid_aids))\n",
     "print(valid_aids)"
@@ -169,13 +144,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sapsii...\n",
+      "[[58526 100001 275225 24 0.0581533536933968 0 4 2 0 None 0 6 0 0 1 5 0 0\n",
+      "  0 6]\n",
+      " [9895 100006 291788 27 0.079390379700951 7 4 0 0 None 0 0 0 0 0 0 None 0\n",
+      "  10 6]\n",
+      " [23018 100007 217937 25 0.0646488355702984 15 2 0 0 None 0 0 0 0 0 0\n",
+      "  None 0 0 8]\n",
+      " [533 100009 253656 36 0.181019761585943 12 2 5 0 9 0 0 0 0 0 0 None 0 0\n",
+      "  8]\n",
+      " [55853 100010 271147 37 0.19636613203211 7 2 13 0 None 0 0 0 0 0 0 None\n",
+      "  0 9 6]\n",
+      " [87977 100011 214619 21 0.0417535080775526 0 4 5 0 6 0 0 0 0 0 0 None 0\n",
+      "  0 6]\n",
+      " [60039 100012 239289 39 0.229591668830459 12 2 5 0 9 0 0 0 3 0 0 None 0\n",
+      "  0 8]\n",
+      " [68591 100016 217590 40 0.247442850379824 7 0 5 0 6 0 6 0 3 0 0 None 7 0\n",
+      "  6]\n",
+      " [29971 100021 220579 27 0.079390379700951 7 4 5 0 None None 0 0 0 0 0\n",
+      "  None 5 0 6]\n",
+      " [77221 100024 201668 36 0.181019761585943 15 2 0 0 9 0 0 0 3 0 0 None 7\n",
+      "  0 0]]\n",
       "sofa...\n",
       "[2 0 2 5 2 3 6 6 4 8]\n"
      ]
@@ -211,15 +207,15 @@
     "    else:\n",
     "        return None\n",
     "\n",
-    "# print('sapsii...')\n",
-    "# # store sapsii subscores in file\n",
-    "# p = Pool(16)\n",
-    "# ress = [p.apply_async(get_sapsii, args=(aid,)) for aid in valid_aids]\n",
-    "# p.close()\n",
-    "# p.join()\n",
-    "# ress = np.array([x.get() for x in ress])\n",
-    "# print(ress[:10])\n",
-    "# np.savez(os.path.join(RESDIR, 'sapsii.npz'), sapsii=ress)\n",
+    "print('sapsii...')\n",
+    "# store sapsii subscores in file\n",
+    "p = Pool(16)\n",
+    "ress = [p.apply_async(get_sapsii, args=(aid,)) for aid in valid_aids]\n",
+    "p.close()\n",
+    "p.join()\n",
+    "ress = np.array([x.get() for x in ress])\n",
+    "print(ress[:10])\n",
+    "np.savez(os.path.join(RESDIR, 'sapsii.npz'), sapsii=ress)\n",
     "\n",
     "print('sofa...')\n",
     "# store sofa scores in file\n",
@@ -234,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +239,7 @@
        "31912"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,20 +250,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9052394083730259\n",
+      "[0 1] [[0.95925072 0.04074928]\n",
+      " [0.97505972 0.02494028]\n",
+      " [0.95925072 0.04074928]\n",
+      " ...\n",
+      " [0.94809621 0.05190379]\n",
+      " [0.93409809 0.06590191]\n",
+      " [0.94809621 0.05190379]]\n"
+     ]
+    }
+   ],
    "source": [
     "# get sofa score: do logistic regression on sofa score\n",
-    "label_mor = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS)).tolist()\n",
+    "label_mor = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS), allow_pickle=True).tolist()\n",
     "label_mor = [l[0] for l in label_mor]\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "lr = LogisticRegression()\n",
-    "X = np.array(np.load(os.path.join(RESDIR, 'sofa.npz'))['sofa']).reshape(-1, 1)\n",
+    "X = np.array(np.load(os.path.join(RESDIR, 'sofa.npz'), allow_pickle=True)['sofa']).reshape(-1, 1)\n",
     "y = np.array(label_mor)\n",
     "lr.fit(X, y)\n",
     "score = lr.score(X, y)\n",
@@ -278,6 +287,13 @@
     "\n",
     "np.savez(os.path.join(RESDIR, 'sofa_res.npz'), sofa_score=sofa_score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -296,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
