--- a/Codes/mimic3_mvcv/12_get_avg_first24hrs_17-features-raw.ipynb
+++ b/Codes/mimic3_mvcv/12_get_avg_first24hrs_17-features-raw.ipynb
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -47,10 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "HRS = 24\n",
@@ -63,7 +59,7 @@
     "if not os.path.exists(RESDIR):\n",
     "    os.makedirs(RESDIR)\n",
     "\n",
-    "hrs_mean = np.load(os.path.join(RESDIR, 'tsmean_%dhrs.npz' % HRS))\n",
+    "hrs_mean = np.load(os.path.join(RESDIR, 'tsmean_%dhrs.npz' % HRS), allow_pickle=True)\n",
     "hrs_mean_array = hrs_mean['hrs_mean_array']\n",
     "hrs_mean_labels = hrs_mean['hrs_mean_labels']\n",
     "\n",
@@ -76,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +81,7 @@
        "35637"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,20 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# mortality labels\n",
-    "adm_labels_all = np.load(os.path.join(SERIALDIR, 'imputed-normed-ep_1_%d.npz' % HRS))['adm_labels_all']\n",
+    "adm_labels_all = np.load(os.path.join(SERIALDIR, 'imputed-normed-ep_1_%d.npz' % HRS), allow_pickle=True)['adm_labels_all']\n",
     "with open(os.path.join(RESDIR, 'output.csv'), 'w') as f:\n",
     "    for res in adm_labels_all:\n",
     "        f.write(','.join(list(map(str, res))) + '\\n')\n",
     "        \n",
     "# icd9 labels\n",
-    "icd9_labels_all = np.load(os.path.join(SERIALDIR, 'imputed-normed-ep_1_%d.npz' % HRS))['y_icd9']\n",
+    "icd9_labels_all = np.load(os.path.join(SERIALDIR, 'imputed-normed-ep_1_%d.npz' % HRS), allow_pickle=True)['y_icd9']\n",
     "with open(os.path.join(RESDIR, 'output_icd9.csv'), 'w') as f:\n",
     "    for res in icd9_labels_all:\n",
     "        f.write(','.join(list(map(str, res))) + '\\n')"
@@ -117,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +135,7 @@
     "    admission_ids.append(r[0]) \n",
     "mv_admset = set(admission_ids)\n",
     "\n",
-    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS)).tolist()\n",
+    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS), allow_pickle=True).tolist()\n",
     "valid_aids = [t[0][-1] for t in data_all]\n",
     "print(len(valid_aids))\n",
     "mv_flag = np.array([valid_aid in mv_admset for valid_aid in valid_aids])\n",
@@ -430,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
