--- a/Codes/mimic3_mvcv/12_get_avg_first48hrs_17-features-processed(fromdb).ipynb
+++ b/Codes/mimic3_mvcv/12_get_avg_first48hrs_17-features-processed(fromdb).ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -36,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# HRS = 24\n",
@@ -54,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,52 +62,52 @@
     }
    ],
    "source": [
-    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS)).tolist()\n",
+    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS), allow_pickle=True).tolist()\n",
     "valid_aids = [t[0][-1] for t in data_all]\n",
     "print(len(valid_aids))\n",
     "# print(valid_aids)\n",
     "\n",
-    "# admtype_map = {\n",
-    "#     'scheduledsurgical': 1,\n",
-    "#     'unscheduledsurgical': 2,\n",
-    "#     'medical': 0\n",
-    "# }\n",
+    "admtype_map = {\n",
+    "    'scheduledsurgical': 1,\n",
+    "    'unscheduledsurgical': 2,\n",
+    "    'medical': 0\n",
+    "}\n",
     "\n",
-    "# def fetch_aid(aid):\n",
-    "#     conn = getConnection()\n",
-    "#     cur = conn.cursor()\n",
-    "#     sql = 'select * from mengcz_17features_first{0}h where hadm_id={1}'.format(HRS, aid)\n",
-    "#     cur.execute(sql)\n",
-    "#     res = cur.fetchone()\n",
-    "#     if res is None:\n",
-    "#         return None\n",
-    "#     res = list(res)[5:]\n",
-    "#     if res[-4] is None:\n",
-    "#         res[-4] = 0\n",
-    "#     if res[-3] is None:\n",
-    "#         res[-3] = 0\n",
-    "#     if res[-2] is None:\n",
-    "#         res[-2] = 0\n",
-    "#     res[-1] = admtype_map[res[-1].lower()]\n",
-    "#     return res\n",
+    "def fetch_aid(aid):\n",
+    "    conn = getConnection()\n",
+    "    cur = conn.cursor()\n",
+    "    sql = 'select * from mengcz_17features_first{0}h where hadm_id={1}'.format(HRS, aid)\n",
+    "    cur.execute(sql)\n",
+    "    res = cur.fetchone()\n",
+    "    if res is None:\n",
+    "        return None\n",
+    "    res = list(res)[5:]\n",
+    "    if res[-4] is None:\n",
+    "        res[-4] = 0\n",
+    "    if res[-3] is None:\n",
+    "        res[-3] = 0\n",
+    "    if res[-2] is None:\n",
+    "        res[-2] = 0\n",
+    "    res[-1] = admtype_map[res[-1].lower()]\n",
+    "    return res\n",
     "\n",
-    "# p = Pool(16)\n",
-    "# ress = p.map(fetch_aid, valid_aids)\n",
-    "# p.close()\n",
-    "# p.join()\n",
+    "p = Pool(16)\n",
+    "ress = p.map(fetch_aid, valid_aids)\n",
+    "p.close()\n",
+    "p.join()\n",
     "\n",
-    "# assert len(ress) == len(valid_aids)\n",
-    "# assert len([1 for x in ress if x is None]) == 0\n",
+    "assert len(ress) == len(valid_aids)\n",
+    "assert len([1 for x in ress if x is None]) == 0\n",
     "\n",
-    "# INPUTFILEPATH = os.path.join(RESDIR, 'input.csv')\n",
-    "# with open(INPUTFILEPATH, 'w') as f:\n",
-    "#     for res in ress:\n",
-    "#         f.write(','.join(list(map(lambda x: str(x) if x is not None else '', res))) + '\\n')"
+    "INPUTFILEPATH = os.path.join(RESDIR, 'input.csv')\n",
+    "with open(INPUTFILEPATH, 'w') as f:\n",
+    "    for res in ress:\n",
+    "        f.write(','.join(list(map(lambda x: str(x) if x is not None else '', res))) + '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +116,7 @@
        "31912"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,14 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# labels\n",
-    "adm_labels_all = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS))\n",
+    "adm_labels_all = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS), allow_pickle=True)\n",
     "with open(os.path.join(RESDIR, 'output.csv'), 'w') as f:\n",
     "    for res in adm_labels_all:\n",
     "        f.write(','.join(list(map(str, res))) + '\\n')"
@@ -146,13 +140,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sapsii_scores = np.load(os.path.join(RESDIR, 'sapsii.npz'))['sapsii']\n",
+    "sapsii_scores = np.load(os.path.join(RESDIR, 'sapsii.npz'), allow_pickle=True)['sapsii']\n",
     "sapsii_subscores = sapsii_scores[:, 5:].astype(np.float64)\n",
     "sapsii_subscores[np.isnan(sapsii_subscores)] = 0\n",
     "np.savetxt(os.path.join(RESDIR, 'input_sapsiisubscores.csv'), sapsii_subscores, delimiter=',')"
@@ -160,10 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sql = 'select distinct hadm_id from mimiciii.icustays where dbsource = \\'metavision\\' '\n",
@@ -205,6 +195,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": true
@@ -219,7 +216,7 @@
     "    inputarray = np.genfromtxt(os.path.join(RESDIR, inputfilename), delimiter=',')\n",
     "    outputarray = np.genfromtxt(os.path.join(RESDIR, outputfilename), delimiter=',')\n",
     "    for t in range(len(adm_labels_all[0])):\n",
-    "        folds = np.load(os.path.join(FOLDSPATH, '5-folds.npz'))['folds_ep_mor'][t][0]\n",
+    "        folds = np.load(os.path.join(FOLDSPATH, '5-folds.npz'), allow_pickle=True)['folds_ep_mor'][t][0]\n",
     "        for fi, f in enumerate(folds):\n",
     "            train, valid, test = f[0], f[1], f[2]\n",
     "            train = np.concatenate((train, valid))\n",
@@ -471,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
