--- a/Codes/mimic3_mvcv/12_get_avg_first48hrs_17-features-raw.ipynb
+++ b/Codes/mimic3_mvcv/12_get_avg_first48hrs_17-features-raw.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -36,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# HRS = 24\n",
@@ -52,7 +48,7 @@
     "if not os.path.exists(RESDIR):\n",
     "    os.makedirs(RESDIR)\n",
     "\n",
-    "hrs_mean = np.load(os.path.join(RESDIR, 'tsmean_%dhrs.npz' % HRS))\n",
+    "hrs_mean = np.load(os.path.join(RESDIR, 'tsmean_%dhrs.npz' % HRS), allow_pickle=True)\n",
     "hrs_mean_array = hrs_mean['hrs_mean_array']\n",
     "hrs_mean_labels = hrs_mean['hrs_mean_labels']\n",
     "\n",
@@ -86,13 +82,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# labels\n",
-    "adm_labels_all = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS))\n",
+    "adm_labels_all = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS), allow_pickle=True)\n",
     "with open(os.path.join(RESDIR, 'output.csv'), 'w') as f:\n",
     "    for res in adm_labels_all:\n",
     "        f.write(','.join(list(map(str, res))) + '\\n')"
@@ -124,7 +118,7 @@
     "    admission_ids.append(r[0]) \n",
     "mv_admset = set(admission_ids)\n",
     "\n",
-    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS)).tolist()\n",
+    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS), allow_pickle=True).tolist()\n",
     "valid_aids = [t[0][-1] for t in data_all]\n",
     "print(len(valid_aids))\n",
     "mv_flag = np.array([valid_aid in mv_admset for valid_aid in valid_aids])\n",
@@ -225,7 +219,7 @@
     "    inputarray = np.genfromtxt(os.path.join(RESDIR, inputfilename), delimiter=',')\n",
     "    outputarray = np.genfromtxt(os.path.join(RESDIR, outputfilename), delimiter=',')\n",
     "    for t in range(len(adm_labels_all[0])):\n",
-    "        folds = np.load(os.path.join(FOLDSPATH, '5-folds.npz'))['folds_ep_mor'][t][0]\n",
+    "        folds = np.load(os.path.join(FOLDSPATH, '5-folds.npz'), allow_pickle=True)['folds_ep_mor'][t][0]\n",
     "        for fi, f in enumerate(folds):\n",
     "            train, valid, test = f[0], f[1], f[2]\n",
     "            train = np.concatenate((train, valid))\n",
@@ -277,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
