--- a/Codes/mimic3_mvcv/9_collect_mortality_labels.ipynb
+++ b/Codes/mimic3_mvcv/9_collect_mortality_labels.ipynb
@@ -12,9 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -47,9 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "admdir = 'admdata/'\n",
@@ -59,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Here we collect all timestamps related to our labels\n",
@@ -133,7 +127,7 @@
     "if not os.path.exists(timelabeldir):\n",
     "    os.makedirs(timelabeldir)\n",
     "def parse_labels(aid):\n",
-    "    times = np.load(os.path.join(timedir, 'adm-%.6d.npy' % aid)).tolist()\n",
+    "    times = np.load(os.path.join(timedir, 'adm-%.6d.npy' % aid), allow_pickle=True).tolist()\n",
     "    dob = times['dob']\n",
     "    dod = times['dod']\n",
     "    admittime = times['admittime']\n",
@@ -190,10 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "p = Pool()\n",
@@ -208,6 +200,13 @@
     "p.close()\n",
     "p.join()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -226,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
