--- a/Codes/mimic3_mvcv/9_getValidDataset.ipynb
+++ b/Codes/mimic3_mvcv/9_getValidDataset.ipynb
@@ -12,9 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -50,13 +48,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "58576 [194627, 137030, 152528, 147541, 146480, 196830, 181257, 187851, 129808, 162786]\n",
-      "46283 [194627, 137030, 152528, 147541, 146480, 196830, 181257, 187851, 152565, 170719]\n"
+      "58576 [135258, 111417, 109321, 150890, 129776, 130943, 123344, 160661, 131014, 140157]\n",
+      "46283 [135258, 111417, 150890, 129776, 130943, 123344, 160661, 131014, 140157, 130523]\n"
      ]
     }
    ],
    "source": [
-    "_adm_first = np.load('res/admission_first_ids.npy').tolist()\n",
+    "_adm_first = np.load('res/admission_first_ids.npy', allow_pickle=True).tolist()\n",
     "admission_first_ids_list = _adm_first['admission_ids']\n",
     "\n",
     "admission_ids = [re.match(r'adm\\-(\\d+)\\.npy', x) for x in os.listdir('admdata/')]\n",
@@ -71,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "TARGETDIR = '../../Data/admdata_valid'\n",
@@ -93,14 +89,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def copy_valid_admissions(aid):\n",
     "    if aid in admission_first_ids_set:\n",
-    "        res = np.load(os.path.join('admdata', 'adm-%.6d.npy' % aid)).tolist()\n",
+    "        res = np.load(os.path.join('admdata', 'adm-%.6d.npy' % aid), allow_pickle=True).tolist()\n",
     "        general = res['general']\n",
     "        age = general[2]\n",
     "        if age >= 15 * 365.25:\n",
@@ -111,6 +105,13 @@
     "p.close()\n",
     "p.join()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -129,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
