--- a/Codes/mimic3_mvcv/12_get_avg_first24hrs_17-features-processed(fromdb).ipynb
+++ b/Codes/mimic3_mvcv/12_get_avg_first24hrs_17-features-processed(fromdb).ipynb
@@ -16,9 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -49,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "HRS = 24\n",
@@ -67,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +75,7 @@
     }
    ],
    "source": [
-    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS)).tolist()\n",
+    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS), allow_pickle=True).tolist()\n",
     "valid_aids = [t[0][-1] for t in data_all]\n",
     "print(len(valid_aids))\n",
     "# print(valid_aids)\n",
@@ -93,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -133,14 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# labels\n",
-    "adm_labels_all = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS))\n",
+    "adm_labels_all = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS), allow_pickle=True)\n",
     "with open(os.path.join(RESDIR, 'output.csv'), 'w') as f:\n",
     "    for res in adm_labels_all:\n",
     "        f.write(','.join(list(map(str, res))) + '\\n')"
@@ -148,13 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sapsii_scores = np.load(os.path.join(RESDIR, 'sapsii.npz'))['sapsii']\n",
+    "sapsii_scores = np.load(os.path.join(RESDIR, 'sapsii.npz'), allow_pickle=True)['sapsii']\n",
     "sapsii_subscores = sapsii_scores[:, 5:].astype(np.float64)\n",
     "sapsii_subscores[np.isnan(sapsii_subscores)] = 0\n",
     "np.savetxt(os.path.join(RESDIR, 'input_sapsiisubscores.csv'), sapsii_subscores, delimiter=',')"
@@ -162,9 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -235,7 +226,7 @@
     "    inputarray = np.genfromtxt(os.path.join(RESDIR, inputfilename), delimiter=',')\n",
     "    outputarray = np.genfromtxt(os.path.join(RESDIR, outputfilename), delimiter=',')\n",
     "    for t in range(len(adm_labels_all[0])):\n",
-    "        folds = np.load(os.path.join(FOLDSPATH, '5-folds.npz'))['folds_ep_mor'][t][0]\n",
+    "        folds = np.load(os.path.join(FOLDSPATH, '5-folds.npz'), allow_pickle=True)['folds_ep_mor'][t][0]\n",
     "        for fi, f in enumerate(folds):\n",
     "            train, valid, test = f[0], f[1], f[2]\n",
     "            train = np.concatenate((train, valid))\n",
@@ -258,7 +249,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -408,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
