--- a/Codes/mimic3_mvcv/12_get_avg_first24hrs_99plus-features-raw.ipynb
+++ b/Codes/mimic3_mvcv/12_get_avg_first24hrs_99plus-features-raw.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -36,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "HRS = 24\n",
@@ -51,7 +47,7 @@
     "if not os.path.exists(RESDIR):\n",
     "    os.makedirs(RESDIR)\n",
     "\n",
-    "hrs_mean = np.load(os.path.join(RESDIR, 'tsmean_%dhrs.npz' % HRS))\n",
+    "hrs_mean = np.load(os.path.join(RESDIR, 'tsmean_%dhrs.npz' % HRS), allow_pickle=True)\n",
     "hrs_mean_array = hrs_mean['hrs_mean_array']\n",
     "hrs_mean_labels = hrs_mean['hrs_mean_labels']\n",
     "\n",
@@ -85,13 +81,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# labels\n",
-    "adm_labels_all = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS))\n",
+    "adm_labels_all = np.load(os.path.join(HRDIR, 'ADM_LABELS_%dhrs.npy' % HRS), allow_pickle=True)\n",
     "with open(os.path.join(RESDIR, 'output.csv'), 'w') as f:\n",
     "    for res in adm_labels_all:\n",
     "        f.write(','.join(list(map(str, res))) + '\\n')"
@@ -111,19 +105,25 @@
     }
    ],
    "source": [
-    "sql = 'select distinct hadm_id from mimiciii.icustays where dbsource = \\'metavision\\' '\n",
-    "sql += 'UNION select distinct hadm_id from mimiciii.transfers where dbsource = \\'metavision\\''\n",
-    "conn = getConnection()\n",
-    "cur = conn.cursor()\n",
-    "cur.execute(sql)\n",
-    "res = cur.fetchall()\n",
+    "# sql = 'select distinct hadm_id from mimiciii.icustays where dbsource = \\'metavision\\' '\n",
+    "# sql += 'UNION select distinct hadm_id from mimiciii.transfers where dbsource = \\'metavision\\''\n",
+    "# conn = getConnection()\n",
+    "# cur = conn.cursor()\n",
+    "# cur.execute(sql)\n",
+    "# res = cur.fetchall()\n",
+    "\n",
+    "import gzip\n",
+    "import pickle\n",
+    "\n",
+    "with gzip.open(\"./res12.pickle\", \"rb\") as f:\n",
+    "    res = pickle.load(f, encoding='latin1')\n",
     "\n",
     "admission_ids = []\n",
     "for r in res:\n",
     "    admission_ids.append(r[0]) \n",
     "mv_admset = set(admission_ids)\n",
     "\n",
-    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS)).tolist()\n",
+    "data_all = np.load(os.path.join(HRDIR, 'DB_merged_%dhrs.npy' % HRS), allow_pickle=True).tolist()\n",
     "valid_aids = [t[0][-1] for t in data_all]\n",
     "print(len(valid_aids))\n",
     "mv_flag = np.array([valid_aid in mv_admset for valid_aid in valid_aids])\n",
@@ -250,7 +250,7 @@
     "    inputarray = np.genfromtxt(os.path.join(RESDIR, inputfilename), delimiter=',')\n",
     "    outputarray = np.genfromtxt(os.path.join(RESDIR, outputfilename), delimiter=',')\n",
     "    for t in range(len(adm_labels_all[0])):\n",
-    "        folds = np.load(os.path.join(FOLDSPATH, '5-folds.npz'))['folds_ep_mor'][t][0]\n",
+    "        folds = np.load(os.path.join(FOLDSPATH, '5-folds.npz'), allow_pickle=True)['folds_ep_mor'][t][0]\n",
     "        for fi, f in enumerate(folds):\n",
     "            train, valid, test = f[0], f[1], f[2]\n",
     "            train = np.concatenate((train, valid))\n",
@@ -302,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
