--- a/Codes/mimic3_mvcv/7_filterItemId_prescript.ipynb
+++ b/Codes/mimic3_mvcv/7_filterItemId_prescript.ipynb
@@ -14,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -40,18 +38,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "conn = getConnection()\n",
     "    \n",
-    "_adm = np.load('res/admission_ids.npy').tolist()\n",
+    "_adm = np.load('res/admission_ids.npy', allow_pickle=True).tolist()\n",
     "admission_ids = _adm['admission_ids']\n",
     "admission_ids_txt = _adm['admission_ids_txt']\n",
     "\n",
-    "db = np.load('res/itemids.npy').tolist()\n",
+    "db = np.load('res/itemids.npy', allow_pickle=True).tolist()\n",
     "input_itemid = db['input']\n",
     "output_itemid = db['output']\n",
     "chart_itemid = db['chart']\n",
@@ -99,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -132,7 +130,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED SYRINGEIND : 59.70 : 6 : [('ml', 40), ('dose', 10), ('mL', 8), ('SYR', 7), ('AMP', 1), ('VIAL', 1)]\n",
+      "****PRES DROPPED SYRINGEIND : 59.70 : 6 : [('ml', 40), ('dose', 10), ('mL', 8), ('SYR', 7), ('VIAL', 1), ('AMP', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -176,7 +174,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED LIDODERM : 50.00 : 2 : [('Appl', 3), ('PTCH', 3)]\n",
+      "****PRES DROPPED LIDODERM : 50.00 : 2 : [('PTCH', 3), ('Appl', 3)]\n",
       "\n",
       "\n",
       "\n",
@@ -192,7 +190,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED TRAN100I : 50.00 : 2 : [('mg', 1), ('mL', 1)]\n",
+      "****PRES DROPPED TRAN100I : 50.00 : 2 : [('mL', 1), ('mg', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -204,7 +202,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED PEPP1 : 53.85 : 5 : [('ml', 7), ('Appl', 3), ('AERO', 1), ('DBTL', 1), ('INH', 1)]\n",
+      "****PRES DROPPED PEPP1 : 53.85 : 5 : [('ml', 7), ('Appl', 3), ('INH', 1), ('DBTL', 1), ('AERO', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -260,7 +258,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED PROFVIAL : 54.55 : 4 : [('UNIT', 6), ('IU', 3), ('units', 1), ('VIAL', 1)]\n",
+      "****PRES DROPPED PROFVIAL : 54.55 : 4 : [('UNIT', 6), ('IU', 3), ('VIAL', 1), ('units', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -268,7 +266,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED CEFA1I : 48.84 : 3 : [('gm', 21), ('g', 11), ('mg', 11)]\n",
+      "****PRES DROPPED CEFA1I : 48.84 : 3 : [('gm', 21), ('mg', 11), ('g', 11)]\n",
       "\n",
       "\n",
       "\n",
@@ -280,7 +278,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED NEOSYR1ML : 59.38 : 4 : [('ml', 95), ('SYR', 61), ('mL', 2), ('VIAL', 2)]\n",
+      "****PRES DROPPED NEOSYR1ML : 59.38 : 4 : [('ml', 95), ('SYR', 61), ('VIAL', 2), ('mL', 2)]\n",
       "\n",
       "\n",
       "\n",
@@ -288,7 +286,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED CETA56T : 33.33 : 3 : [('Appl', 1), ('BOX', 1), ('SPRY', 1)]\n",
+      "****PRES DROPPED CETA56T : 33.33 : 3 : [('SPRY', 1), ('BOX', 1), ('Appl', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -336,7 +334,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED MULT5L : 32.03 : 9 : [('mL', 475), ('ml', 443), ('CAP', 282), ('TAB', 246), ('UDCUP', 24), ('CAN', 4), ('LIQ', 4), ('CON', 3), ('dose', 2)]\n",
+      "****PRES DROPPED MULT5L : 32.03 : 9 : [('mL', 475), ('ml', 443), ('CAP', 282), ('TAB', 246), ('UDCUP', 24), ('LIQ', 4), ('CAN', 4), ('CON', 3), ('dose', 2)]\n",
       "\n",
       "\n",
       "\n",
@@ -348,7 +346,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED GAVITAB : 50.00 : 2 : [('mg', 1), ('TAB', 1)]\n",
+      "****PRES DROPPED GAVITAB : 50.00 : 2 : [('TAB', 1), ('mg', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -440,7 +438,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED LACT30L : 54.65 : 4 : [('mL', 5994), ('ml', 4972), ('g', 1), ('gm', 1)]\n",
+      "****PRES DROPPED LACT30L : 54.65 : 4 : [('mL', 5994), ('ml', 4972), ('gm', 1), ('g', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -460,11 +458,11 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED D30W250I : 50.00 : 2 : [('ml', 1), ('mL', 1)]\n",
+      "****PRES DROPPED D30W250I : 50.00 : 2 : [('mL', 1), ('ml', 1)]\n",
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED PULMOZYME : 48.98 : 5 : [('mg/ml', 24), ('mg', 21), ('mL', 2), ('mg/mL', 1), ('NEB', 1)]\n",
+      "****PRES DROPPED PULMOZYME : 48.98 : 5 : [('mg/ml', 24), ('mg', 21), ('mL', 2), ('NEB', 1), ('mg/mL', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -472,7 +470,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED CROM200 : 87.50 : 4 : [('mg', 28), ('mL', 2), ('AMP', 1), ('ml', 1)]\n",
+      "****PRES DROPPED CROM200 : 87.50 : 4 : [('mg', 28), ('mL', 2), ('ml', 1), ('AMP', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -600,7 +598,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED RHINOC : 63.64 : 3 : [('INH', 7), ('mcg', 2), ('SPRY', 2)]\n",
+      "****PRES DROPPED RHINOC : 63.64 : 3 : [('INH', 7), ('SPRY', 2), ('mcg', 2)]\n",
       "\n",
       "\n",
       "\n",
@@ -624,7 +622,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED BIMA.03E : 66.20 : 5 : [('DROP', 94), ('gtt', 40), ('BOX', 3), ('DRP', 3), ('UNIT', 2)]\n",
+      "****PRES DROPPED BIMA.03E : 66.20 : 5 : [('DROP', 94), ('gtt', 40), ('DRP', 3), ('BOX', 3), ('UNIT', 2)]\n",
       "\n",
       "\n",
       "\n",
@@ -636,7 +634,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED CYCL0.05ES : 63.10 : 9 : [('DROP', 53), ('gtt', 20), ('DRP', 3), ('ml', 2), ('VIAL', 2), ('mg', 1), ('CONC', 1), ('Appl', 1), ('BTL', 1)]\n",
+      "****PRES DROPPED CYCL0.05ES : 63.10 : 9 : [('DROP', 53), ('gtt', 20), ('DRP', 3), ('VIAL', 2), ('ml', 2), ('mg', 1), ('CONC', 1), ('BTL', 1), ('Appl', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -696,7 +694,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED MICODP : 50.00 : 2 : [('Appl', 3), ('SUPP', 3)]\n",
+      "****PRES DROPPED MICODP : 50.00 : 2 : [('SUPP', 3), ('Appl', 3)]\n",
       "\n",
       "\n",
       "\n",
@@ -712,7 +710,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED BECLINH : 38.80 : 6 : [('PUFF', 123), ('mcg', 122), ('INH', 67), ('dose', 2), ('in', 2), ('AERO', 1)]\n",
+      "****PRES DROPPED BECLINH : 38.80 : 6 : [('PUFF', 123), ('mcg', 122), ('INH', 67), ('in', 2), ('dose', 2), ('AERO', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -732,7 +730,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED BUDE0.25 : 74.51 : 8 : [('mg', 38), ('INH', 3), ('NEB', 3), ('AMP', 2), ('ml', 2), ('PUFF', 1), ('mL', 1), ('AERO', 1)]\n",
+      "****PRES DROPPED BUDE0.25 : 74.51 : 8 : [('mg', 38), ('NEB', 3), ('INH', 3), ('ml', 2), ('AMP', 2), ('PUFF', 1), ('mL', 1), ('AERO', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -776,7 +774,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED MVI : 53.47 : 8 : [('TAB', 4576), ('CAP', 3940), ('ml', 31), ('mL', 6), ('dose', 2), ('UDCUP', 1), ('CON', 1), ('LIQ', 1)]\n",
+      "****PRES DROPPED MVI : 53.47 : 8 : [('TAB', 4576), ('CAP', 3940), ('ml', 31), ('mL', 6), ('dose', 2), ('UDCUP', 1), ('LIQ', 1), ('CON', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -872,7 +870,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED CYAN1KIT : 50.00 : 3 : [('gm', 2), ('KIT', 1), ('mg', 1)]\n",
+      "****PRES DROPPED CYAN1KIT : 50.00 : 3 : [('gm', 2), ('mg', 1), ('KIT', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -996,7 +994,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED UREA20C : 66.67 : 4 : [('Appl', 10), ('CREA', 2), ('gm', 2), ('EA', 1)]\n",
+      "****PRES DROPPED UREA20C : 66.67 : 4 : [('Appl', 10), ('gm', 2), ('CREA', 2), ('EA', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1004,7 +1002,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED D5W100 : 51.29 : 5 : [('mL', 11466), ('ml', 10888), ('BAG', 1), ('gm', 1), ('dose', 1)]\n",
+      "****PRES DROPPED D5W100 : 51.29 : 5 : [('mL', 11466), ('ml', 10888), ('gm', 1), ('dose', 1), ('BAG', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1020,15 +1018,15 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED LIDO4S : 50.00 : 2 : [('ml', 1), ('mL', 1)]\n",
+      "****PRES DROPPED LIDO4S : 50.00 : 2 : [('mL', 1), ('ml', 1)]\n",
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED SYRINGEPD : 87.50 : 5 : [('SYR', 49), ('ml', 4), ('mg', 1), ('mL', 1), ('dose', 1)]\n",
+      "****PRES DROPPED SYRINGEPD : 87.50 : 5 : [('SYR', 49), ('ml', 4), ('mL', 1), ('mg', 1), ('dose', 1)]\n",
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED CEFR2I : 71.43 : 3 : [('gm', 5), ('g', 1), ('mg', 1)]\n",
+      "****PRES DROPPED CEFR2I : 71.43 : 3 : [('gm', 5), ('mg', 1), ('g', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1036,7 +1034,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED ECON1C : 40.00 : 3 : [('Appl', 2), ('DROP', 2), ('TUBE', 1)]\n",
+      "****PRES DROPPED ECON1C : 40.00 : 3 : [('DROP', 2), ('Appl', 2), ('TUBE', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1064,15 +1062,15 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED TEST5G : 36.36 : 6 : [('PKT', 4), ('gm', 2), ('Appl', 2), ('mg', 1), ('PTCH', 1), ('PACK', 1)]\n",
+      "****PRES DROPPED TEST5G : 36.36 : 6 : [('PKT', 4), ('gm', 2), ('Appl', 2), ('PTCH', 1), ('PACK', 1), ('mg', 1)]\n",
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED BSS15ES : 42.86 : 3 : [('DROP', 3), ('ml', 3), ('gtt', 1)]\n",
+      "****PRES DROPPED BSS15ES : 42.86 : 3 : [('ml', 3), ('DROP', 3), ('gtt', 1)]\n",
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED LIDO220I : 82.61 : 6 : [('mL', 171), ('ml', 33), ('mg', 1), ('Appl', 1), ('VIAL', 1), (None, 0)]\n",
+      "****PRES DROPPED LIDO220I : 82.61 : 6 : [('mL', 171), ('ml', 33), ('VIAL', 1), ('mg', 1), ('Appl', 1), (None, 0)]\n",
       "\n",
       "\n",
       "\n",
@@ -1100,7 +1098,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED KALE1L : 53.33 : 5 : [('ml', 24), ('mL', 18), ('TAB', 1), ('CAP', 1), ('LIQ', 1)]\n",
+      "****PRES DROPPED KALE1L : 53.33 : 5 : [('ml', 24), ('mL', 18), ('TAB', 1), ('LIQ', 1), ('CAP', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1112,7 +1110,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED ACET20/4I : 79.29 : 5 : [('mg', 5225), ('mL', 814), ('ml', 549), ('gm', 1), ('GR', 1)]\n",
+      "****PRES DROPPED ACET20/4I : 79.29 : 5 : [('mg', 5225), ('mL', 814), ('ml', 549), ('GR', 1), ('gm', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1132,7 +1130,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED BUDE0.5 : 76.56 : 6 : [('mg', 49), ('INH', 6), ('NEB', 4), ('AMP', 3), ('mcg', 1), ('ml', 1)]\n",
+      "****PRES DROPPED BUDE0.5 : 76.56 : 6 : [('mg', 49), ('INH', 6), ('NEB', 4), ('AMP', 3), ('ml', 1), ('mcg', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1168,7 +1166,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED IMIQ5C : 50.00 : 3 : [('Appl', 2), ('CREA', 1), ('PKT', 1)]\n",
+      "****PRES DROPPED IMIQ5C : 50.00 : 3 : [('Appl', 2), ('PKT', 1), ('CREA', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1236,7 +1234,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED NYST5L : 52.85 : 6 : [('ml', 2290), ('mL', 1964), ('UNIT', 75), ('TAB', 2), ('mg', 1), ('SOLN', 1)]\n",
+      "****PRES DROPPED NYST5L : 52.85 : 6 : [('ml', 2290), ('mL', 1964), ('UNIT', 75), ('TAB', 2), ('SOLN', 1), ('mg', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1278,7 +1276,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED ALBU5H : 31.63 : 14 : [('mL', 31), ('NEB', 21), ('mg', 17), ('ml', 9), ('mg/hr', 7), ('INH', 2), ('PUFF', 2), ('mg/ml', 2), ('mcg', 2), ('BTL', 2), ('mL/hr', 1), ('dose', 1), ('AMP', 1), (None, 0)]\n",
+      "****PRES DROPPED ALBU5H : 31.63 : 14 : [('mL', 31), ('NEB', 21), ('mg', 17), ('ml', 9), ('mg/hr', 7), ('PUFF', 2), ('mg/ml', 2), ('mcg', 2), ('INH', 2), ('BTL', 2), ('mL/hr', 1), ('dose', 1), ('AMP', 1), (None, 0)]\n",
       "\n",
       "\n",
       "\n",
@@ -1302,7 +1300,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED PERI12L : 50.00 : 2 : [('ml', 1), ('mL', 1)]\n",
+      "****PRES DROPPED PERI12L : 50.00 : 2 : [('mL', 1), ('ml', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1354,7 +1352,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED PAPAIN2 : 57.31 : 9 : [('ml', 149), ('mL', 90), ('dose', 9), ('mg', 3), ('Appl', 3), ('UNIT', 2), ('BTL', 2), ('mg/ml', 1), ('VIAL', 1)]\n",
+      "****PRES DROPPED PAPAIN2 : 57.31 : 9 : [('ml', 149), ('mL', 90), ('dose', 9), ('mg', 3), ('Appl', 3), ('UNIT', 2), ('BTL', 2), ('VIAL', 1), ('mg/ml', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1486,7 +1484,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED ADVA500/50 : 78.93 : 6 : [('INH', 397), ('PUFF', 62), ('mcg', 35), ('mg', 7), ('dose', 1), ('SPRY', 1)]\n",
+      "****PRES DROPPED ADVA500/50 : 78.93 : 6 : [('INH', 397), ('PUFF', 62), ('mcg', 35), ('mg', 7), ('SPRY', 1), ('dose', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1526,7 +1524,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED BTL750I : 50.00 : 2 : [('ml', 1), ('mL', 1)]\n",
+      "****PRES DROPPED BTL750I : 50.00 : 2 : [('mL', 1), ('ml', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1566,7 +1564,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED DILT120SR : 50.00 : 2 : [('CAP', 1), ('mg', 1)]\n",
+      "****PRES DROPPED DILT120SR : 50.00 : 2 : [('mg', 1), ('CAP', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1586,7 +1584,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED NS250 : 51.12 : 6 : [('mL', 25788), ('ml', 24630), ('mEq', 16), ('BAG', 11), ('mg', 1), ('mL/Syringe', 1)]\n",
+      "****PRES DROPPED NS250 : 51.12 : 6 : [('mL', 25788), ('ml', 24630), ('mEq', 16), ('BAG', 11), ('mL/Syringe', 1), ('mg', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1706,7 +1704,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED CIMBASE : 50.00 : 2 : [('BAG', 1), ('mL', 1)]\n",
+      "****PRES DROPPED CIMBASE : 50.00 : 2 : [('mL', 1), ('BAG', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1722,7 +1720,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED COCA4T : 45.45 : 4 : [('mL', 5), ('mg', 2), ('ml', 2), ('VIAL', 2)]\n",
+      "****PRES DROPPED COCA4T : 45.45 : 4 : [('mL', 5), ('VIAL', 2), ('ml', 2), ('mg', 2)]\n",
       "\n",
       "\n",
       "\n",
@@ -1750,7 +1748,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED ROCU100I : 82.71 : 5 : [('mg', 110), ('mg/ml', 20), ('mcg', 1), ('ml', 1), ('VIAL', 1)]\n",
+      "****PRES DROPPED ROCU100I : 82.71 : 5 : [('mg', 110), ('mg/ml', 20), ('VIAL', 1), ('ml', 1), ('mcg', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1794,7 +1792,7 @@
       "\n",
       "\n",
       "\n",
-      "****PRES DROPPED BUPI25I : 46.67 : 7 : [('ml', 21), ('mL', 13), ('ml/hr', 3), ('mg/ml', 3), ('mg', 2), ('VIAL', 2), ('mL/hr', 1)]\n",
+      "****PRES DROPPED BUPI25I : 46.67 : 7 : [('ml', 21), ('mL', 13), ('ml/hr', 3), ('mg/ml', 3), ('VIAL', 2), ('mg', 2), ('mL/hr', 1)]\n",
       "\n",
       "\n",
       "\n",
@@ -1816,7 +1814,7 @@
     "valid_prescript_unit =[]\n",
     "dropped_id = []\n",
     "notfound = []\n",
-    "results = np.load('res/filtered_prescript_raw.npy').tolist()['raw']\n",
+    "results = np.load('res/filtered_prescript_raw.npy', allow_pickle=True).tolist()['raw']\n",
     "\n",
     "for x in results:\n",
     "    i, outputunits = x[0], x[1]\n",
@@ -1854,7 +1852,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1870,6 +1870,13 @@
     "np.save('res/filtered_prescript.npy',{'id':valid_prescript,'unit':valid_prescript_unit})\n",
     "print('saved!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1888,7 +1895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
